GNOME Bugzilla – Bug 642764
dia doesn't build with libpng 1.5
Last modified: 2011-07-04 10:57:51 UTC
Created attachment 181331 [details] build dia with libpng 1.5 I get this error: export_png.c: In Funktion »export_png_ok«: export_png.c:181:19: Fehler: Dereferenzierung eines Zeigers auf unvollständigen Typen I'll attach a patch to fix it.
Thanks for noticing, fixed in master and dia-0-97 branch. http://git.gnome.org./browse/dia/commit/?id=8e28086b95578d17386c3be9aea132064be829a0 http://git.gnome.org./browse/dia/commit/?h=dia-0-97&id=59f67782b9e382b2d71aeabbd493799b179bdec0
*** Bug 653882 has been marked as a duplicate of this bug. ***
Is a dia-0.97.2 bump planned soon? Looks like 0.97 branch already contains a lot of bug fixes since 0.97.1 Thanks a lot