Bug 642764 - use png_jmpbuf() rather than direct member access

Fix from Hanno Boeck to make Dia compile with libpng 1.5
https://bugzilla.gnome.org/show_bug.cgi?id=642764